# accelduino-rs

./: Cargo.toml  LICENSE.md  README.md  rust-toolchain.toml
.cargo/: config.toml
src/: bmx055.rs  main.rs  traits.rs
src/traits/: accl.rs  gyro.rs  madgwick_filter.rs  mag.rs  sensor.rs
