[package]
name = "accelduino-rs"
version = "0.1.0"
authors = ["katsu <katsu1112uchi@gmail.com>"]
edition = "2021"
license = "MIT"

[[bin]]
name = "accelduino-rs"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.2"
nb = "0.1.2"
embedded-hal = "0.2.7"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = { version = "0.5", default-features = false, features = ["heapless"]}
quaternion-core = { version = "0.3", default-features = false, features = ["libm"]}
ufmt_float = "0.2"

[dependencies.num-traits]
version = "0.2.15"
default-features = false
features = ["libm"]

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "4170a773d4d76cc93433d2455ed8b14e573ebe70"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
